# Nazrin

./: Cargo.toml  LICENSE  README.md  nazrin.pyi  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: performance-test.txt
src/: lib.rs  tfidf.rs
