[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "nazrin"
version = "0.1.0"
authors = [{ name = "MelodyYuuka", email = "melody@yunmengdu.cn" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]


[tool.maturin]
# Build artifacts with the specified Cargo profile
profile = "release"
# Cargo manifest path
manifest-path = "Cargo.toml"
# Bindings type
bindings = "pyo3"
# Strip the library for minimum file size
strip = true
